--- a/ueb02/CSS/Knuth-Fisher-Yates.css
+++ b/ueb02/CSS/Knuth-Fisher-Yates.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    background-image: url("bg.jpg");
+    background-image: url("../IMG/bg.jpg");
     color: white;
 }
 
